--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^4.3.2",
-    "faker": "^6.6.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-iconly": "^2.2.10",
     "react-router-dom": "5.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
+    "recharts": "^2.7.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
